--- a/walls/src/css/style.css
+++ b/walls/src/css/style.css
@@ -40,8 +40,33 @@ body {
 a,
 input,
 button,
-textarea:focus {
+textarea,
+link:focus {
   outline: none;
+}
+/* Form */
+.form-input {
+  display: block;
+  margin: 2rem 0;
+  width: 100%;
+  padding: 1.5rem;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+}
+.form-label {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  padding: 0.5rem;
+  font-family: 'ProximaNova_rg', sans-serif;
+  font-size: 1.3rem;
+  background-color: #ffffff;
+}
+.form-button {
+  display: block;
+  width: 100%;
+  height: 5.5rem;
+  font-size: 1.6rem;
 }
 /* Button center */
 .wrap {
@@ -59,6 +84,20 @@ textarea:focus {
   padding: 3rem 0;
   background: #ffffff url(../img/main-bg.jpg) center center no-repeat;
   background-size: cover;
+}
+.main-form {
+  text-align: center;
+  background-color: #ffffff;
+  padding: 3rem 5rem;
+}
+.main-form h2 {
+  font-size: 1.8rem;
+  padding-bottom: 2rem;
+}
+.main-form-small {
+  display: block;
+  padding-top: 1.5rem;
+  font-size: 1.2rem;
 }
 .main-content {
   padding: 10rem 0;
@@ -81,7 +120,7 @@ textarea:focus {
   padding: 2.4rem 3rem;
   font-size: 1.8rem;
   color: #ffffff;
-  background-color: #70c849;
+  background-color: #43b80b;
 }
 .main-price-strong {
   font-size: 2.4rem;
@@ -92,41 +131,6 @@ textarea:focus {
   padding-top: 2rem;
   text-transform: uppercase;
   font-size: 2rem;
-}
-.main-form {
-  text-align: center;
-  background-color: #ffffff;
-  padding: 4rem 5rem;
-}
-.main-form h2 {
-  font-size: 1.8rem;
-  padding-bottom: 2rem;
-}
-.main-form-label {
-  display: block;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  padding: 0.5rem;
-  background-color: #ffffff;
-}
-.main-form-input {
-  display: block;
-  margin: 2rem 0;
-  width: 100%;
-  height: 5rem;
-  border-radius: 5px;
-  border: 1px solid #dddddd;
-}
-.main-form-button {
-  width: 100%;
-  height: 6rem;
-  font-size: 1.6rem;
-}
-.main-form-small {
-  display: block;
-  padding-top: 1.5rem;
-  font-size: 1.2rem;
 }
 .header {
   height: 7rem;
@@ -146,6 +150,7 @@ textarea:focus {
 /* Features */
 .features {
   text-align: center;
+  margin-bottom: 20rem;
 }
 .features h3 {
   font-family: 'ProximaNova_bold', sans-serif;
@@ -189,6 +194,250 @@ textarea:focus {
   background: url(../img/arrow-right.png) center no-repeat;
   background-size: 70%;
 }
+/* Price */
+.price {
+  text-align: center;
+  background: url('../img/price/price-bg.jpg') center;
+  background-size: 100%;
+  padding-bottom: 10rem;
+}
+.price-header {
+  margin-bottom: 9rem;
+}
+.price-form {
+  padding: 5rem 2rem;
+  min-height: 65rem;
+  box-shadow: 7px 12px 21px 0px rgba(0, 0, 0, 0.17);
+  background-color: #ffffff;
+}
+.price-form-header {
+  font-size: 1.9rem;
+  font-family: 'ProximaNova_bold', sans-serif;
+  margin-bottom: 3.5rem;
+}
+.price-form-button {
+  display: inline-block;
+  box-shadow: 4px 7px 13px 0px rgba(0, 0, 0, 0.04);
+  width: 70%;
+  height: 6.5rem;
+  font-size: 1.8rem;
+}
+.price-prices {
+  margin-top: 12rem;
+  margin-bottom: 4rem;
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 3.6rem;
+  color: #ffffff;
+}
+.price-price {
+  margin: 3.5rem 0 3rem;
+  font-size: 1.9rem;
+  font-family: 'ProximaNova_bold', sans-serif;
+}
+.price-price span {
+  font-size: 3rem;
+}
+.price-option {
+  font-size: 1.8rem;
+  color: #ffffff;
+}
+.price-button {
+  margin-top: 13.5rem;
+  float: right;
+  box-shadow: 4px 7px 13px 0px rgba(0, 0, 0, 0.04);
+  width: 93%;
+  height: 6.5rem;
+  font-size: 1.6rem;
+}
+.price-list {
+  padding: 0;
+  list-style: none;
+  line-height: 1.6;
+  min-height: 16rem;
+  font-size: 1.8rem;
+}
+.price-list li:before {
+  content: '';
+  display: inline-block;
+  margin-right: 0.7rem;
+  height: 1.5rem;
+  width: 1.3rem;
+  background: url('../img/check.png') no-repeat center;
+  background-size: 100%;
+}
+/* Feedback */
+.feedback {
+  background-color: #ededed;
+}
+.feedback-header {
+  text-align: center;
+  font-family: 'ProximaNova_bold', sans-serif;
+  margin: 11rem;
+}
+.feedback-header h4 {
+  font-size: 3.6rem;
+}
+.feedback-description {
+  line-height: 1.6;
+  font-size: 1.6rem;
+  margin-bottom: 3rem;
+}
+.feedback-slider {
+  padding: 6rem 5rem;
+  margin-bottom: 6rem;
+  background-color: #ffffff;
+  box-shadow: 6px 10px 18px 0px rgba(0, 0, 0, 0.11);
+}
+.feedback-slider-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  height: 5rem;
+  width: 4rem;
+  background-color: #43b80b;
+}
+.feedback-slider-arrow img {
+  width: 40%;
+}
+.feedback-slider-arrow-prev {
+  left: -4rem;
+}
+.feedback-slider-arrow-next {
+  right: -4rem;
+}
+.feedback-feedback {
+  width: 100%;
+  border: 2px solid #43b80b;
+  padding: 2rem 3.6rem;
+  font-style: italic;
+  position: relative;
+}
+.feedback-feedback::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -3rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #ffffff;
+  border: 2px solid #43b80b;
+  border-bottom: none;
+  border-top-right-radius: 100px;
+}
+.feedback-form {
+  background-color: #ffffff;
+  padding: 3rem 10rem;
+  margin-bottom: 5rem;
+}
+.feedback-form-label {
+  transform: translateX(-50%) translateY(20%);
+}
+.feedback-form h4 {
+  text-align: center;
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 2.2rem;
+  padding-bottom: 2rem;
+}
+.feedback-form-button {
+  margin-top: 2rem;
+}
+.feedback .media h5 {
+  font-size: 1.4rem;
+}
+.feedback .media span {
+  font-size: 1.6rem;
+  font-family: 'ProximaNova_bold', sans-serif;
+}
+.feedback .media img {
+  margin-right: 1.5rem;
+  margin-bottom: 4rem;
+}
+.feedback-hand {
+  position: absolute;
+  transform: translateX(60%) translateY(-100%);
+}
+/* Scheme */
+.scheme {
+  background: #ffffff url(../img/scheme/hand.png) bottom right -10rem no-repeat;
+}
+.scheme-header {
+  margin-top: 12rem;
+  text-align: center;
+}
+.scheme-header h4 {
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 3.6rem;
+  margin-bottom: 3rem;
+}
+.scheme-header p {
+  font-size: 1.6rem;
+  margin-bottom: 6rem;
+}
+.scheme-block {
+  min-height: 31rem;
+}
+.scheme-block img {
+  height: 10rem;
+  margin-bottom: 3rem;
+}
+.scheme-block h5 {
+  font-size: 2.2rem;
+  font-family: 'ProximaNova_bold', sans-serif;
+}
+.scheme-block span {
+  font-size: 1.7rem;
+  line-height: 1;
+}
+/* All-inclusive */
+.all-inclusive {
+  background-color: #f5f5f5;
+}
+.all-inclusive_header {
+  text-align: center;
+}
+.all-inclusive_header h3 {
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 4.8rem;
+  color: #43b80b;
+  margin-top: 12rem;
+  margin-bottom: 4rem;
+}
+.all-inclusive_header p {
+  font-size: 1.6rem;
+  margin-bottom: 10rem;
+}
+.all-inclusive_circle {
+  display: inline-block;
+  background-color: #43b80b;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: #ffffff;
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 2rem;
+}
+.all-inclusive_circle-border {
+  display: inline-block;
+  width: 5rem;
+  height: 5rem;
+  border: 2px solid #43b80b;
+  border-radius: 50%;
+  line-height: 4rem;
+  text-align: center;
+  padding: 0.3rem;
+}
+.all-inclusive .media {
+  min-height: 12rem;
+}
+.all-inclusive .media h4 {
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 1.6rem;
+  margin-bottom: 0;
+}
+.all-inclusive .media p {
+  font-size: 1.3rem;
+}
 /* Всплывающие окна */
 /* Получить консультацию */
 .popup {
@@ -201,13 +450,13 @@ textarea:focus {
   width: 100%;
   height: 100%;
   z-index: 9;
-  padding: 4rem 6rem;
   background-color: rgba(0, 0, 0, 0.5);
 }
 .popup-window {
   position: absolute;
   left: 50%;
   top: 10%;
+  padding: 3rem 6rem;
   transform: translateX(-50%);
   background-color: #ffffff;
 }
@@ -217,14 +466,14 @@ textarea:focus {
 .popup-close {
   position: absolute;
   left: 105%;
-  transform: translateY(-60%);
+  transform: translateY(-80%);
   border: none;
   background: none;
   color: #ffffff;
   font-size: 5rem;
 }
 .popup-header {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   font-family: 'ProximaNova_bold', sans-serif;
   font-size: 2rem;
 }
@@ -237,6 +486,14 @@ textarea:focus {
 @media (max-width: 1200px) {
   .phone-block {
     text-align: center;
+  }
+  .price-button {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 4rem;
+  }
+  .price-form {
+    margin-bottom: 4rem;
   }
 }
 @media (max-width: 992px) {
