--- a/walls/src/less/style.less
+++ b/walls/src/less/style.less
@@ -31,7 +31,7 @@
 }
 /* Colors */
 
-@icons-color: #70c849;
+@icons-color: #43b80b;
 @btn-color: #fab102;
 @text-color: #292929;
 @danger-color: #ff0000;
@@ -64,8 +64,36 @@ html {
 body {
 	.rg();
 }
-a, input, button, textarea:focus {
+a, input, button, textarea, link:focus {
 	outline: none;
+}
+
+/* Form */
+
+.form {
+	&-input {
+		display: block;
+		margin: 2rem 0;
+		width: 100%;
+		padding: 1.5rem;
+		border-radius: 5px;
+		border: 1px solid @input-border;
+	}
+	&-label {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%)  translateY(-50%);
+		padding: 0.5rem;
+		.rg();
+		font-size: 1.3rem;
+		background-color: @light;
+	}
+	&-button {
+		display: block;
+		width: 100%;
+		height: 5.5rem;
+		font-size: 1.6rem;
+	}
 }
 
 /* Button center */
@@ -87,6 +115,20 @@ a, input, button, textarea:focus {
 	padding: 3rem 0;
 	background: #fff url(../img/main-bg.jpg) center center no-repeat;
 	background-size: cover;
+	&-form {
+		text-align: center;
+		background-color: @light;
+		padding: 3rem 5rem;
+		h2 {
+			font-size: 1.8rem;
+			padding-bottom: 2rem;
+		}
+		&-small {
+			display: block;
+			padding-top: 1.5rem;
+			font-size: 1.2rem;
+		}
+	}
 	&-content {
 		padding: 10rem 0;
 	}
@@ -122,41 +164,6 @@ a, input, button, textarea:focus {
 		text-transform: uppercase;
 		font-size: 2rem;
 	}
-	&-form {
-		text-align: center;
-		background-color: @light;
-		padding: 4rem 5rem;
-		h2 {
-			font-size: 1.8rem;
-			padding-bottom: 2rem;
-		}
-		&-label {
-			display: block;
-			position: absolute;
-			left: 50%;
-			transform: translateX(-50%)  translateY(-50%);
-			padding: 0.5rem;
-			background-color: @light;
-		}
-		&-input {
-			display: block;
-			margin: 2rem 0;
-			width: 100%;
-			height: 5rem;
-			border-radius: 5px;
-			border: 1px solid @input-border;
-		}
-		&-button {
-			width: 100%;
-			height: 6rem;
-			font-size: 1.6rem;
-		}
-		&-small {
-			display: block;
-			padding-top: 1.5rem;
-			font-size: 1.2rem;
-		}
-	}
 }
 .header {
 	height: 7rem;
@@ -180,6 +187,7 @@ a, input, button, textarea:focus {
 
 .features {
 	text-align: center;
+	margin-bottom: 20rem;
 	h3 {
 		.bold();
 		font-size: 2rem;
@@ -224,6 +232,266 @@ a, input, button, textarea:focus {
 	background-size: 70%;
 }
 
+/* Price */
+
+.price {
+	text-align: center;
+	background: url('../img/price/price-bg.jpg') center;
+	background-size: 100%;
+	padding-bottom: 10rem;
+	&-header {
+		margin-bottom: 9rem;
+	}
+	&-form {
+		padding: 5rem 2rem;
+		min-height: 65rem;
+		box-shadow: 7px 12px 21px 0px rgba(0, 0, 0, 0.17);
+		background-color: @light;
+		&-header {
+			font-size: 1.9rem;
+			.bold();
+			margin-bottom: 3.5rem;
+		}
+		&-button {
+			display: inline-block;
+			box-shadow: 4px 7px 13px 0px rgba(0, 0, 0, 0.04);
+			width: 70%;
+			height: 6.5rem;
+			font-size: 1.8rem;
+
+		}
+	}
+	&-prices {
+		margin-top: 12rem;
+		margin-bottom: 4rem;
+		.bold();
+		font-size: 3.6rem;
+		color: @light;
+	}
+	&-price {
+		margin: 3.5rem 0 3rem;
+		font-size: 1.9rem;
+		.bold();
+		span {
+			font-size: 3rem;
+		}
+	}
+	&-option {
+		font-size: 1.8rem;
+		color: @light;
+	}
+	&-button {
+		margin-top: 13.5rem;
+		float: right;
+		box-shadow: 4px 7px 13px 0px rgba(0, 0, 0, 0.04);
+		width: 93%;
+		height: 6.5rem;
+		font-size: 1.6rem;
+	}
+	&-list {
+		padding: 0;
+		list-style: none;
+		line-height: 1.6;
+		min-height: 16rem;
+		font-size: 1.8rem;
+		li {
+			&:before {
+				content: '';
+				display: inline-block;
+				margin-right: 0.7rem;
+				height: 1.5rem;
+				width: 1.3rem;
+				background: url('../img/check.png') no-repeat center;
+				background-size: 100%;
+				
+			}
+		}
+	}
+}
+
+/* Feedback */
+
+.feedback {
+	background-color: #ededed;
+	&-header {
+		text-align: center;
+		.bold();
+		margin: 11rem;
+		h4 {
+			font-size: 3.6rem;
+		}
+	}
+	&-description {
+		line-height: 1.6;
+		font-size: 1.6rem;
+		margin-bottom: 3rem;
+	}
+	&-slider {
+		padding: 6rem 5rem;
+		margin-bottom: 6rem;
+		background-color: @light;
+		box-shadow: 6px 10px 18px 0px rgba(0, 0, 0, 0.11);
+		&-arrow {
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			border: none;
+			height: 5rem;
+			width: 4rem;
+			background-color: @icons-color;
+			img {
+				width: 40%;
+			}
+			&-prev {
+				left: -4rem;
+			}
+			&-next {
+				right: -4rem;
+			}
+		}
+	}
+	&-feedback {
+		width: 100%;
+		border: 2px solid @icons-color;
+		padding: 2rem 3.6rem;
+		font-style: italic;
+		position: relative;
+		&::before {
+			content: '';
+			display: block;
+			position: absolute;
+			top: -3rem;
+			width: 3rem;
+			height: 3rem;
+			background-color: @light;
+			border: 2px solid @icons-color;
+			border-bottom: none;
+			border-top-right-radius: 100px;
+		}
+	}
+	&-form {
+		background-color: @light;
+		padding: 3rem 10rem;
+		margin-bottom: 5rem;
+		&-label {
+			transform: translateX(-50%)  translateY(20%);
+		}
+		h4 {
+			text-align: center;
+			.bold();
+			font-size: 2.2rem;
+			padding-bottom: 2rem;
+		}
+		&-button {
+			margin-top: 2rem;
+		}
+	}
+	.media {
+		h5 {
+			font-size: 1.4rem;
+		}
+		span {
+			font-size: 1.6rem;
+			.bold();
+		}
+		img {
+			margin-right: 1.5rem;
+			margin-bottom: 4rem;
+		}
+	}
+	&-hand {
+		position: absolute;
+		transform: translateX(60%) translateY(-100%);
+	}
+}
+
+/* Scheme */
+
+.scheme {
+	background: #fff url(../img/scheme/hand.png) bottom right -10rem no-repeat;
+	&-header {
+		margin-top: 12rem;
+		text-align: center;
+		h4 {
+			.bold();
+			font-size: 3.6rem;
+			margin-bottom: 3rem;
+		}
+		p {
+			font-size: 1.6rem;
+			margin-bottom: 6rem;
+		}
+	}
+	&-block {
+		min-height: 31rem;
+		img {
+			height: 10rem;
+			margin-bottom: 3rem;
+		}
+		h5 {
+			font-size: 2.2rem;
+			.bold();
+		}
+		span {
+			font-size: 1.7rem;
+			line-height: 1;
+		}
+	}
+}
+
+/* All-inclusive */
+
+.all-inclusive {
+	background-color: #f5f5f5;
+	&_header {
+		text-align: center;
+		h3 {
+			.bold();
+			font-size: 4.8rem;
+			color: @icons-color;
+			margin-top: 12rem;
+			margin-bottom: 4rem;
+		}
+		p {
+			font-size: 1.6rem;
+			margin-bottom: 10rem;
+		}
+	}
+	&_circle {
+		display: inline-block;
+		background-color: @icons-color;
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+		color: @light;
+		.bold();
+		font-size: 2rem;
+		&-border {
+			display: inline-block;
+			width: 5rem;
+			height: 5rem;
+			border: 2px solid @icons-color;
+			border-radius: 50%;
+			line-height: 4rem;
+			text-align: center;
+			padding: 0.3rem;
+		}
+
+	}
+	.media {
+		min-height: 12rem;
+		h4 {
+			.bold();
+			font-size: 1.6rem;
+			margin-bottom: 0;
+		}
+		p {
+			font-size: 1.3rem;
+		}
+	}
+
+}
+
 /* Всплывающие окна */
 /* Получить консультацию */
 
@@ -237,12 +505,12 @@ a, input, button, textarea:focus {
 	width: 100%;
 	height: 100%;
 	z-index: 9;
-	padding: 4rem 6rem;
 	background-color: rgba(0, 0, 0, 0.5);
 	&-window {
 		position: absolute;
 		left: 50%;
 		top: 10%;
+		padding: 3rem 6rem;
 		transform: translateX(-50%);
 		background-color: @light;
 	}
@@ -252,14 +520,14 @@ a, input, button, textarea:focus {
 	&-close {
 		position: absolute;
 		left: 105%;
-		transform: translateY(-60%);
+		transform: translateY(-80%);
 		border: none;
 		background: none;
 		color: @light;
 		font-size: 5rem;
 	}
 	&-header {
-		margin-top: 2rem;
+		margin-top: 1.5rem;
 		.bold();
 		font-size: 2rem;
 	}
@@ -275,6 +543,16 @@ a, input, button, textarea:focus {
 @media (max-width: 1200px) { 
 	.phone-block {
 		text-align: center;
+	}
+	.price {
+		&-button {
+			width: 100%;
+			margin: 0;
+			margin-bottom: 4rem;
+		}
+		&-form {
+			margin-bottom: 4rem;
+		}
 	}
 }
 @media (max-width: 992px) {
